--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+  <script src="config.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sara spricht mit dir</title>
@@ -62,7 +63,7 @@
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          "Authorization": "Bearer MY_API_HERE"
+          "Authorization": `Bearer ${OPENAI_API_KEY}`
         },
         body: JSON.stringify({
           model: "gpt-4",
