--- a/index.html
+++ b/index.html
@@ -4,83 +4,37 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <script src="config.js"></script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sara spricht mit dir</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sara spricht mit dir</title>
+  
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+  
+    <!-- CSS Datei -->
+    <link rel="stylesheet" href="style/style.css">
+  
+    <!-- js files. config.js always first -->
+    <script src="config.js"></script>
+    
+    <script src="scripts/thresholds.js" defer></script>
+
+    <script src="scripts/sara.js" defer></script>
+
+  </head>
 </head>
 <body>
   <h1>Hallo, ich bin Sara 👋</h1>
   <p>Sprich einfach mit mir – ich höre zu, wenn du meinen Namen sagst!</p>
 
   <button onclick="startListening()">🎙️ Sprachaufnahme starten</button>
+  <button onclick="stopListening()">🛑 Sprachaufnahme stoppen</button>
+  <button onclick="stopSpeaking()">🤫 Shut up Sara</button>
+  
   <p id="status">Status: Nicht aktiv</p>
   <p><strong>Du sagst:</strong> <span id="transcript"></span></p>
   <p><strong>Sara antwortet:</strong> <span id="response"></span></p>
-
-  <script>
-    const transcriptEl = document.getElementById("transcript");
-    const responseEl = document.getElementById("response");
-    const statusEl = document.getElementById("status");
-
-    let recognition;
-    if ('webkitSpeechRecognition' in window) {
-      recognition = new webkitSpeechRecognition();
-    } else {
-      alert("Dein Browser unterstützt keine Sprachaufnahme. Bitte nutze Chrome auf Android oder Desktop.");
-    }
-
-    recognition.continuous = true;
-    recognition.interimResults = true;
-    recognition.lang = 'de-DE';
-
-    recognition.onstart = () => statusEl.textContent = "Status: Sara hört zu...";
-    recognition.onerror = (event) => console.error(event);
-
-    recognition.onresult = async (event) => {
-      let finalTranscript = '';
-      for (let i = event.resultIndex; i < event.results.length; ++i) {
-        const transcript = event.results[i][0].transcript;
-        if (event.results[i].isFinal) {
-          finalTranscript += transcript;
-        }
-      }
-      transcriptEl.textContent = finalTranscript;
-
-      if (finalTranscript.toLowerCase().includes("sara")) {
-        const antwort = await frageSara(finalTranscript);
-        responseEl.textContent = antwort;
-        sprich(antwort);
-      }
-    };
-
-    function startListening() {
-      recognition.start();
-    }
-
-    async function frageSara(text) {
-      const response = await fetch("https://api.openai.com/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": `Bearer ${OPENAI_API_KEY}`
-        },
-        body: JSON.stringify({
-          model: "gpt-4",
-          messages: [{ role: "user", content: text }]
-        })
-      });
-
-      const data = await response.json();
-      return data.choices[0].message.content;
-    }
-
-    function sprich(text) {
-      const synth = window.speechSynthesis;
-      const utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = 'de-DE';
-      synth.speak(utterance);
-    }
-  </script>
-</body>
+  
+  </body>
 </html>
